--- a/style.css
+++ b/style.css
@@ -6,59 +6,108 @@ body {
 }
 
 header {
-    background-color: black;
-    margin: 0;
-    padding: 10px;
-    position: sticky;
-    top: 0;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  background-color: black;
+  margin: 0;
+  padding: 10px;
+  position: sticky;
+  top: 0;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 header h1 {
   font-family: "Rubik Dirt", sans-serif;
-  color:rgb(199, 139, 74);
+  color: rgb(199, 139, 74);
   font-size: 50px;
 }
 
 #logo {
-    background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #00e5ff, #22ff00);
-    background-size: 100%;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-  }
+  background-color: #f3ec78;
+  background-image: linear-gradient(180deg, #00e5ff, #22ff00);
+  background-size: 100%;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
 
 header ul {
-    padding-left: 0;
-    list-style: none;
-    display: flex;
-    border-top: #555 5px solid;
-    border-left: #555 5px solid;
-    border-right: #AAA 5px solid;
-    border-bottom: #AAA 5px solid;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
 }
 
-header ul li{
-    padding: 20px;
+.bordes {
+  border-top: #555 5px solid;
+  border-left: #555 5px solid;
+  border-right: #aaa 5px solid;
+  border-bottom: #aaa 5px solid;
 }
 
-#lista-imagenes{
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
+header ul li {
+  padding: 20px;
 }
+
+#lista-imagenes {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
 
 #lista-imagenes img {
-    width: 400px;
-    height: 200px;
-    object-fit: cover;
-    margin: 20px;
-    border-top: #555 5px solid;
-    border-left: #555 5px solid;
-    border-bottom: #AAA 5px solid;
-    border-right: #AAA 5px solid;
+  width: 400px;
+  height: 200px;
+  object-fit: cover;
+  margin: 20px;
 }
 
+h2 {
+  text-align: center;
+  border-bottom: 2px solid black;
+}
+
+h3 {
+  text-align: center;
+}
+
+#sobre-nosotros-section {
+  width: 60%;
+  margin: 0 auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.2rem;
+}
+#sobre-nosotros-section p {
+  text-align: center;
+}
+
+quote {
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+}
+
+#contacto-section {
+  width: 60%;
+  margin: 0 auto;
+  font-size: 1.2rem;
+}
+
+fieldset {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputs {
+  width: 80%;
+  padding: 10px;
+  margin: 10px;
+}
+
+form button {
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+}
